jupyterhub-ingress-config.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: hub-ingress

  namespace: test-abhi-ns

  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/backend-hostname: 20.169.246.46

spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              service:
                name: proxy-public

                port:
                  number: 80

            pathType: Prefix
